# artifacts/api-server/src/routes/index.ts
@@ -9,6 +9,7 @@ import cartRouter from "./cart";
 import adminRouter from "./admin";
 import wellnessRouter from "./wellness";
 import partnersRouter from "./partners";
+import consultantsRouter from "./consultants";
 
 const router: IRouter = Router();
 
@@ -22,5 +23,6 @@ router.use(cartRouter);
 router.use(adminRouter);
 router.use(wellnessRouter);
 router.use(partnersRouter);
+router.use(consultantsRouter);
 
 export default router;
